[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coder-logstream-process"
version = "0.0.1"
description = "Execute commands and stream logs to Coder logstream API"
requires-python = ">=3.10"
dependencies = ["httpx==0.28.1", "pydantic==2.12.3", "click==8.1.8"]

[project.scripts]
coder-logstream-process = "coder_logstream_process.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coder_logstream_process"]

[dependency-groups]
dev = [
  "pytest==7.4.4",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "vcrpy==7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
