[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross"
version = "0.0.1"
description = "Cross-platform build tool for Moon monorepo"
requires-python = ">=3.10"
dependencies = ["click==8.1.8", "jinja2==3.1.5"]

[project.scripts]
cross = "cross.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cross"]

[dependency-groups]
dev = ["pytest==7.4.4", "pytest-cov==4.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
