[project]
name = "external-dns-cleanup"
version = "0.1.0"
description = "CLI to cleanup Cloudflare DNS records after external-dns shutdown"
requires-python = ">=3.11"
dependencies = ["click==8.1.8", "cloudflare==4.3.1", "python-dotenv==1.0.1"]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-vcr==1.0.2", "vcrpy==6.0.2"]

[project.scripts]
external-dns-cleanup = "external_dns_cleanup.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/external_dns_cleanup"]
