[project]
name = "external-dns-cleanup-tests"
version = "0.1.0"
description = "Tests for external-dns-cleanup script"
requires-python = ">=3.12"
dependencies = ["click==8.1.8", "cloudflare==4.3.1", "python-dotenv==1.0.1"]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-vcr==1.0.2", "vcrpy==6.0.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
