[project]
name = "fleet-mcp"
version = "0.1.0"
description = "MCP server for managing Claude Code agent fleet in Coder"
requires-python = ">=3.12"
dependencies = [
  "fastmcp==2.13.0.2",
  "pydantic==2.12.3",
  "httpx==0.28.1",
  "python-dotenv>=1.2.1",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "respx==0.21.1",
  "pyyaml==6.0.2",
  "jinja2==3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
