[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleet-mcp"
version = "0.1.0"
description = "Clean architecture fleet management for Claude Code agents in Coder workspaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp==2.13.0.2",
  "pydantic==2.12.3",
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "uvicorn==0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_mcp_clean"]

[dependency-groups]
dev = [
  "vcrpy==7.0.0",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "respx==0.22.0",
  "import-linter==2.2",
]

[tool.importlinter]
root_package = "fleet_mcp_clean"
source_root = "src"

[[tool.importlinter.contracts]]
name = "Layer boundaries"
type = "layers"
layers = [
  "fleet_mcp_clean.tools",
  "fleet_mcp_clean.services",
  "fleet_mcp_clean.repositories",
  "fleet_mcp_clean.clients",
]
