[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setup-fleet-mcp"
version = "0.0.0"
description = "Fleet management using MCP for AI agents in Coder workspaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp==2.13.0.2",
  "pydantic==2.12.3",
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "uvicorn==0.34.0",
]

[project.scripts]
setup-fleet-mcp = "fleet_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet_mcp"]

[dependency-groups]
dev = [
  "vcrpy==7.0.0",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "respx==0.22.0",
  "import-linter==2.2",
]

[tool.importlinter]
root_package = "fleet_mcp"
source_root = "src"

[[tool.importlinter.contracts]]
name = "Layer boundaries"
type = "layers"
layers = [
  "fleet_mcp.tools",
  "fleet_mcp.services",
  "fleet_mcp.repositories",
  "fleet_mcp.clients",
]
