[project]
name = "occupancy_component"
version = "0.3.0"
description = "Home Assistant custom component for occupancy tracking"
requires-python = ">=3.12,<3.13"
dependencies = [
  # Pinned to 0.13.205: last version supporting Python 3.12
  # Uses homeassistant==2025.1.4 with ciso8601==2.3.2 (has linux aarch64 wheels)
  # Version 0.13.206+ requires Python 3.13+ via homeassistant 2025.2.0+
  "pytest-homeassistant-custom-component==0.13.205",
  "tzdata>=2024.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# homeassistant 2025.1.4 depends on aiohasupervisor==0.2.2b5 (a prerelease)
prerelease = "allow"

[dependency-groups]
dev = []
