load("@rules_python//python:defs.bzl", "py_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_task//task:defs.bzl", "cmd", "task")

package(default_visibility = ["//visibility:public"])

op_file = select({
    "//:is_darwin_arm64": ["@onepassword_darwin_arm64//:op"],
    "//:is_linux_amd64": ["@onepassword_linux_amd64//:op"],
    "//:is_linux_arm64": ["@onepassword_linux_arm64//:op"],
})

sh_binary(
    name = "op_binary",
    srcs = op_file,
)

task(
    name = "op",
    cmds = [
        cmd.shell(
            cmd.executable(":op_binary"),
            "$CLI_ARGS",
        ),
    ],
)

py_library(
    name = "lib",
    srcs = ["lib.py"],
)
