load("@bazel_tools//libs/python:toolchain.bzl", "py_runtime_pair")
load("@rules_python//python:defs.bzl", "py_runtime")

package(default_visibility = ["//visibility:public"])

constraint_setting(name = "python_containerized")

python_base_image_file = select({
    "//:is_linux_amd64": ["@python_base_image_amd64//:image"],
    "//:is_linux_arm64": ["@python_base_image_arm64//:image"],
})

filegroup(
    name = "python_base_image_file",
    srcs = python_base_image_file,
)

constraint_value(
    name = "python_run_in_container",
    constraint_setting = ":python_containerized",
)

py_runtime(
    name = "python_container_py3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "python_container_py_runtime_pair",
    py3_runtime = ":python_container_py3_runtime",
)

toolchain(
    name = "python_container_py_toolchain",
    target_compatible_with = [
        ":python_run_in_container",
    ],
    toolchain = ":python_container_py_runtime_pair",
    toolchain_type = "@bazel_tools//libs/python:toolchain_type",
)
